--- a/Day3/3_05_lidar_data_processing/CMakeLists.txt
+++ b/Day3/3_05_lidar_data_processing/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(lidar_data_processing)
-set(PCL_DIR "/home/user/pcl/release/")
-set(PCL_INCLUDE_DIRS "/usr/include/pcl-1.7")
+
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
 
@@ -9,7 +8,7 @@ set(PCL_INCLUDE_DIRS "/usr/include/pcl-1.7")
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  PCL
+  pcl_conversions
   pcl_ros
   roscpp
   sensor_msgs
@@ -125,7 +124,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/lidar_data_processing.cpp
+#   src/${PROJECT_NAME}/lidar_data_processing_node.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -136,7 +135,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(${PROJECT_NAME}_node src/lidar_data_processing.cpp)
+add_executable(${PROJECT_NAME}_node src/lidar_data_processing_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
